@@ -7,6 +7,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -43,7 +44,7 @@ public class EmplDto implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(emplAuthNm));
+        return emplAuthNm != null ? List.of(new SimpleGrantedAuthority(emplAuthNm)) : Collections.emptyList();
     }
 
     @Override
